# RubiksSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DATA/: README.md
examples/: CMakeLists.txt  main.cpp  main.cu
include/: Camera.hpp  Lookup.hpp  Move.hpp  RubiksCube.hpp  RubiksSolver.hpp  SerialPort.hpp  SerialPortOld.hpp  Solver.hpp  Stopwatch.hpp  simpleSerial.hpp  solution.hpp
include/RubiksLibrary/: InfoLogger.hpp  Lookup.hpp  Move.hpp  RubiksCube.hpp  RubiksSolver.hpp  Solver.hpp  Stopwatch.hpp  solution.hpp
src/: CMakeLists.txt  Camera.cpp  Lookup.cpp  Move.cpp  RubiksCube.cpp  RubiksCubeWrapper.cpp  RubiksSolver.cpp  SerialPort.cpp  SerialPortOld.cpp  Solver.cpp  main.cpp  simpleSerial.cpp  solution.cpp
src/RubiksLibrary/: InfoLogger.cpp  Lookup.cpp  Move.cpp  RubiksCube.cpp  RubiksCubeWrapper.cpp  RubiksSolver.cpp  Solver.cpp
tests/: CMakeLists.txt  SolvingSpeed.cpp
